# EDUPlatform

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
EDUPlatform/: manage.py
EDUPlatform/EDUPlatform/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
EDUPlatform/testing_system/: admin.py  annotations.py  consts.py  endpoints.py  models.py  serializers.py  tests.py  urls.py
EDUPlatform/testing_system/migrations/: 0001_create_course_model.py  0002_create_topic_model.py  0003_create_article_model.py  0004_create_test_model.py  0005_create_question_model.py  0006_create_answer_model.py  0007_change_topic_model.py  0008_change_article_model.py  0009_create_attempt_model.py  0010_add_image_model.py
EDUPlatform/users/: admin.py  annotations.py  consts.py  endpoints.py  managers.py  models.py  serializers.py  tests.py  urls.py
EDUPlatform/users/migrations/: 0001_create_user_model.py  0002_create_teacher_model.py  0003_create_student_model.py  0004_create_course_model.py  0004_create_group_model.py  0005_create_topic_model.py  0006_create_article_model.py  0007_create_test_model.py  0008_create_question_model.py  0009_create_answer_model.py
