[tool.poetry]
name = "eduplatform"
version = "0.1.0"
description = ""
authors = ["Nikita <nikitapt63@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.1"

[tool.poetry.group.dev.dependencies]
isort = "5.10.1"
flake8 = "5.0.4"
black = "22.10.0"
pyupgrade = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
