[tool.poetry]
name = "eduplatform"
version = "0.1.0"
description = "Eduplatform project cool"
authors = ["Nikita <nikitapt63@gmail.com>", "Dima <dimastantsel@gmail.com>", "Kate <katherinameliuk1@gmail.com>", "Vlad <vladfrolkov411@gmail.com>", "Aliaksandr <aliaksandrmatusevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.2"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"
psycopg2 = "2.9.4"
Pillow = "9.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pyupgrade = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
